@@ -226,12 +226,21 @@ end
 function Sandbox:find_zombie_syndrome()
     if self.zombie_syndrome then return self.zombie_syndrome end
     for _,syn in ipairs(df.global.world.raws.syndromes.all) do
+        local has_flags = false
         for _,effect in ipairs(syn.ce) do
-            if df.creature_interaction_effect_add_simple_flagst:is_instance(effect) and
-                    effect.tags1.OPPOSED_TO_LIFE and effect['end'] == -1 then
-                self.zombie_syndrome = syn
-                return syn
+            if df.creature_interaction_effect_display_namest:is_instance(effect) then
+                goto continue
             end
+            if df.creature_interaction_effect_add_simple_flagst:is_instance(effect) and
+                    effect.tags1.OPPOSED_TO_LIFE and
+                    effect['end'] == -1
+            then
+                has_flags = true
+            end
+        end
+        if has_flags then
+            self.zombie_syndrome = syn
+            return syn
         end
         ::continue::
     end
