@@ -45,6 +45,7 @@ Template for new versions:
 - `quickfort`: fix merge logic for disjoint stockpiles that are given the same label
 - `makeown`: set target animals to tame and domesticated
 - `gui/sandbox`: created citizens can now be useful military squad members
+- `gui/sandbox`: created undead now have a purple shade (after save and reload)
 
 ## Misc Improvements
 - `gui/unit-info-viewer`: now displays a unit's weight, relative to either dwarves, elephants or cats
